js was modified

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,13 +25,13 @@
         <p><strong>Name:</strong> <span id="name"></span></p>
         <p><strong>Register Number:</strong> <span id="register_number"></span></p>
         <p><strong>CGPA:</strong> <span id="cgpa"></span></p>
-        <p><strong>Dbms:</strong> <span id="dbms"></span></p>
-        <p><strong>Ai:</strong> <span id="ai"></span></p>
-        <p><strong>Os:</strong> <span id="os"></span></p>
-        <p><strong>Cc:</strong> <span id="cc"></span></p>
-        <p><strong>Fla:</strong> <span id="fla"></span></p>
-        <p><strong>Cn:</strong> <span id="cn"></span></p>
-        <p><strong>Sepm:</strong> <span id="sepm"></span></p>
+        <p><strong>DBMS:</strong> <span id="dbms"></span></p>
+        <p><strong>AI:</strong> <span id="ai"></span></p>
+        <p><strong>OS:</strong> <span id="os"></span></p>
+        <p><strong>CC:</strong> <span id="cc"></span></p>
+        <p><strong>FLA:</strong> <span id="fla"></span></p>
+        <p><strong>CN:</strong> <span id="cn"></span></p>
+        <p><strong>SEPM:</strong> <span id="sepm"></span></p>
     </div>
 
     <!-- Add Interests Form -->
